# madbg

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: python-package.yml  tests.yml
madbg/: __init__.py  __main__.py  api.py  app.py  client.py  communication.py  consts.py  debugger.py  inject_demo.py  inject_into_main_thread.py  inject_into_thread.py  server.py  tty_utils.py  utils.py
scripts/: demo.py  settrace_test.py
tests/: test_madbg.py
tests/system/: conftest.py  test_madbg.py  test_post_mortem.py  test_run_with_debugging.py  test_set_trace.py  test_set_trace_on_connect.py  utils.py
tests/system/scripts/: divide_with_zero.py
tests/unit/: test_utils.py
