[options]
packages = madbg
python_requires = >=3.7
install_requires =
    click
    IPython>=7.17.0
    prompt_toolkit
    hypno>=0.1.3

[metadata]
name = madbg
version = 1.3.1
description = A fully-featured remote debugger for python
author = Maor Kleinberger
author_email = kmaork@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.txt
keywords = debugger remote tty attach ipdb pdb debug
url = https://github.com/kmaork/madbg
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux

[options.entry_points]
console_scripts =
    madbg = madbg.__main__:cli
